add doc generation logging for regression testing